use Character.valueOf to get char for unicode value starting Java 9